# send-email-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
app/: __init__.py  email.py  schemas.py
app/main/: __init__.py  forms.py  routes.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: _macros.html  base.html  form.html  index.html
